# FileCopy

./: .gitignore  CMakeLists.txt  main.c
Client/: ClientMain.c
Server/: ServerMain.c
Utils/: List.c  ProtocolAnalysis.c  Queue.c  Sockect.c  ThreadPool.c
include/: List.h  ProtocolAnalysis.h  Queue.h  Sockect.h  ThreadPool.h
